[metadata]
author = Nobuya Sato
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Clustering assisted by the random forest
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
name = forestcluster
version = attr: forestcluster._version.__version__

[options]
install_requires =
    numpy >= 1.13
    scikit-learn >= 1.0
    scipy >= 1.0
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
